# particleDB.cpp

./: CMakeLists.txt  README.md
data/: particle2022.csv  particleDecays.csv
examples/: example1.cpp  example2.cpp
include/: particleDB.h  particles.h
include/particleDB/: database.h  definitions.h  io.h  particle.h  utilities.h
include/particles/: definitions.h  io.h  particle.h  utilities.h
src/: database.cpp  io.cpp  particle.cpp  utilities.cpp
